k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
